test-cases/final-dump/trait_error_abstract_proc_signature.exp
Error detected during type checking of module(s) trait_error_abstract_proc_signature, trait_error_abstract_proc_signature.processor
final-dump/trait_error_abstract_proc_signature.wybe:7:1: Invalid implementation of trait trait_error_abstract_proc_signature.processor for type wybe.int: no matching implementation of proc process
    candidate trait_error_abstract_proc_signature.process<0>(wybe.float) -> (wybe.float) does not match:
        parameter 1 has type wybe.float, expected wybe.int
    candidate trait_error_abstract_proc_signature.process<1>(?wybe.int) -> (?wybe.int) does not match:
        parameter 1 has output (?) flow, expected input
    candidate trait_error_abstract_proc_signature.process<2>(wybe.int,wybe.int) -> (wybe.int,wybe.int) does not match:
        has 2 parameter(s), expected 1
